# NeuroEv_WANN

./: .gitignore  README.md  activation.py  config.py  configuration.py  ff_nn.py  population.py  pyproject.toml  species.py  tester.py  trainer.py  visualizer.ipynb  wann_core.py
tasks/: __init__.py  bipedal_walker.py  cancer.py  car_racing.py  cart_pole.py  glass.py  logical_operations.py  lunar_lander.py  nn_task.py
