[tool.poetry]
name = "neuroev-wann"
version = "0.1.0"
description = ""
authors = ["favir0 <f4vir0@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
matplotlib = "^3.9.0"
networkx = "^3.3"
gymnasium = {extras = ["box2d"], version = "^0.29.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
